--- a/stocktrade/src/main/resources/templates/cadastro.html
+++ b/stocktrade/src/main/resources/templates/cadastro.html
@@ -4,7 +4,7 @@
     th:replace="~{fragments/headFragment :: head('StockTrade - Cadastro')}"
   ></head>
 
-  <body>
+  <body class="customGradiente2">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
