--- a/stocktrade/src/main/resources/templates/dividendo.html
+++ b/stocktrade/src/main/resources/templates/dividendo.html
@@ -3,7 +3,7 @@
 
 <head th:replace="~{fragments/headFragment :: head('StockTrade - Dividendos')}"></head>
 
-<body>
+<body class="customGradiente2">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
