--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -3,14 +3,14 @@
   <head
     th:replace="~{fragments/headFragment :: head('StockTrade - Invista')}"
   ></head>
-  <body id="sobre-page">
+  <body id="sobre-page" class="customGradiente2">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div th:replace="~{fragments/headerFragment :: header('Invista')}"></div>
 
       <div class="container mb-4 justify-content-center">
-        <div class="row ms-5 mt-5">
+        <div class="row ms-5 mt-5 ">
           <div class="col-md-6">
               <h1 class="fonte-size-index fw-bold mt-100">Negocie mais de 100 Ações na StockTrade</h1>
           </div>
@@ -111,7 +111,7 @@
                 class="d-flex align-items-center justify-content-start mt-4 pt-4"
               >
                 <div class="">
-                  <h6>Investimentos</h6>
+                  <h6>Investir</h6>
                 </div>
               </div>
             </div>
