--- a/stocktrade/src/main/resources/templates/sobre.html
+++ b/stocktrade/src/main/resources/templates/sobre.html
@@ -3,7 +3,7 @@
 
 <head th:replace="~{fragments/headFragment :: head('StockTrade - Sobre')}"></head>
 
-<body id="sobre-page">
+<body id="sobre-page" class="customGradiente2">
   <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
   <main>
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <div class="container mb-10">
+      <div class="container pb-5">
         <div class="container justify-content-center">
           <div class="row g-1 gy-1">
             <!-- Linha1 dos cards -->
