--- a/stocktrade/src/main/resources/templates/carteira.html
+++ b/stocktrade/src/main/resources/templates/carteira.html
@@ -2,7 +2,7 @@
 
 <head th:replace="~{fragments/headFragment :: head('StockTrade - Carteira')}"></head>
 
-<body id="index-logado-page">
+<body id="index-logado-page" class="customGradiente2">
   <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
   <main>
