--- a/stocktrade/src/main/resources/templates/contato.html
+++ b/stocktrade/src/main/resources/templates/contato.html
@@ -3,18 +3,18 @@
 
 <head th:replace="~{fragments/headFragment :: head('StockTrade - Contato')}"></head>
 
-<body id="contato-page">
+<body id="contato-page" class="customGradiente2">
   <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
   <main>
     <div th:replace="~{fragments/headerFragment :: header('Contato')}"></div>
 
-    <div class="container-fluid container-img-background4">
-      <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3 pdb5">
-        <div class="row justify-content-center mt-5 texts">
+    <div class="container-fluid container-img-background4 pb-5">
+      <div class="container-fluid justify-content-center pt-5 pe-5 ps-5 pb-5">
+        <div class="row justify-content-center ">
           <!-- Coluna dos campos do formulário -->
           <div class="col-md-6">
-            <h1>Contate-nos!</h1>
+            <h1 class="mb-5">Contate-nos!</h1>
             <form>
               <div class="form-row">
                 <div class="col-md-6 mb-3">
@@ -40,11 +40,11 @@
 
               <div class="mb-3 ps-1">
                 <label for="mensagem" class="form-label">Mensagem</label>
-                <textarea class="form-control custom-input" id="mensagem" rows="50"
+                <textarea class="form-control custom-input mb-5" id="mensagem" rows="50"
                   placeholder="Digite sua mensagem"></textarea>
               </div>
               <div class="text-center">
-                <button type="submit" class="btn btn-outline-primary botao1 me-4">Enviar mensagem</button>
+                <button type="submit" class="btn btn-outline-primary botao1 me-4 mt-5">Enviar mensagem</button>
               </div>
             </form>
           </div>
