--- a/stocktrade/src/main/resources/templates/contatoLogado.html
+++ b/stocktrade/src/main/resources/templates/contatoLogado.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head th:replace="~{fragments/headFragment :: head('StockTrade - Contato')}"></head>
-  <body id="contato-page">
+  <body id="contato-page" class="customGradiente2">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div th:replace="~{fragments/headerLogadoFragment :: header('Contato')}"></div>
 
-      <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3 pdb5">
-        <div class="row justify-content-center mt-5 texts">
+      <div class="container-fluid justify-content-center pe-5 ps-5 pdb5 mt-5 pt-3">
+        <div class="row justify-content-center mt-5">
           <!-- Coluna dos campos do formulário -->
           <div class="col-md-6">
             <h1>Contate-nos!</h1>
