--- a/stocktrade/src/main/resources/templates/historico.html
+++ b/stocktrade/src/main/resources/templates/historico.html
@@ -1,35 +1,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+  <head
+    th:replace="~{fragments/headFragment :: head('StockTrade - Histórico')}"
+  ></head>
 
-<head th:replace="~{fragments/headFragment :: head('StockTrade - Histórico')}"></head>
+  <body id="index-logado-page" class="customGradiente2">
+    <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
-<body id="index-logado-page">
-  <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
+    <main>
+      <div
+        th:replace="~{fragments/headerLogadoFragment :: header('Histórico')}"
+      ></div>
 
-  <main>
-    <div th:replace="~{fragments/headerLogadoFragment :: header('Histórico')}"></div>
-
-    <div class="container-fluid mt-2 mb-2">
-      <div class="row ms-5 mt-5">
-        <!-- Coluna dos textos à esquerda -->
-        <div class="col-md-6">
-          <h1 class="h1">
-            Histórico
-          </h1>
+      <div class="container-fluid mt-2 mb-2">
+        <div class="row ms-5 mt-5">
+          <!-- Coluna dos textos à esquerda -->
+          <div class="col-md-6">
+            <h1 class="h1">Histórico</h1>
+          </div>
+          <h5>Todas as movimentações</h5>
         </div>
-        <h5>Todas as movimentações</h5>
       </div>
-    </div>
 
-    <div th:replace="~{fragments/tabela/tabelaMovimentacoes :: tabelaMovimentacoes}"></div>
-  </main>
+      <div
+        th:replace="~{fragments/tabela/tabelaMovimentacoes :: tabelaMovimentacoes}"
+      ></div>
+    </main>
 
-  <footer th:replace="~{fragments/footerLogadoFragment :: footer}"></footer>
+    <footer th:replace="~{fragments/footerLogadoFragment :: footer}"></footer>
 
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.6/css/jquery.dataTables.css">
-  <script type="text/javascript" charset="utf8"
-    src="https://cdn.datatables.net/1.11.6/js/jquery.dataTables.js"></script>
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/1.11.6/css/jquery.dataTables.css"
+    />
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://cdn.datatables.net/1.11.6/js/jquery.dataTables.js"
+    ></script>
+    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
