--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
     th:replace="~{fragments/headFragment :: head('StockTrade - Home')}"
   ></head>
 
-  <body id="home-page">
+  <body id="home-page" class="customGradiente2">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
