--- a/stocktrade/src/main/resources/templates/indexLogado.html
+++ b/stocktrade/src/main/resources/templates/indexLogado.html
@@ -1,192 +1,153 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-  <head
-    th:replace="~{fragments/headFragment :: head('StockTrade - Home')}"
-  ></head>
+  <head th:replace="~{fragments/headFragment :: head('StockTrade - Home')}">
+  </head>
 
-  <body id="index-logado-page">
+  <body id="index-logado-page" class="customGradiente2">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div
         th:replace="~{fragments/headerLogadoFragment :: header('Home')}"
       ></div>
-      
+
       <div class="container-fluid mt-2 mb-2">
         <div class="row ms-5 mt-5">
           <div class="col-md-6 custom-padding-left">
             <h1 class="h5 fw-bold">Preços diários por valor de mercado</h1>
-            <p class="fs-8 mt-4 mb-3 max-width-800px cinza">
+            <!-- <p class="fs-8 mt-4 mb-3 max-width-800px cinza">
               Atualizado em 19/09/2023
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
 
       <div class="container mb-10">
-        <div class="container">
-          <!-- Card 1 abaixo dos textos -->
-          <div class="row g-0 pt-3 custom-padding-left7">
-            <div class="col-md-6">
-              <div class="custom-card4">
-                <div class="card-body">
-                  <div
-                    class="custom-padding-left2 d-flex align-items-center altura-card"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      fill="currentColor"
-                      class="bi bi-graph-up-arrow"
-                      viewBox="0 0 16 16"
-                    >
-                      <path
-                        d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z"
-                      />
-                    </svg>
-                    <p class="fs-5 mt-3 mb-3 custom-padding-left3">Em Alta!</p>
-                  </div>
-                  <div class="custom-card5 home-logado-card2">
-                    <div class="card-body">
-                      <div
-                        class="d-flex align-items-center altura-card home-logado-card"
-                      >
-                        <img
-                          src="images/petrobras-icon.png"
-                          class="img-fluid rounded-start margem-esquerda"
-                          alt="edu-financeira"
-                        />
-                        <div>
-                          <p class="fs-5 mt-3 mb-3">
-                            <span class="preto">Petrobras</span
-                            ><span class="cinza">PETR4</span>
-                          </p>
-                        </div>
-                        <div>
-                          <p class="fs-5 mt-3 mb-3 custom-padding-left4">
-                            2,95%
-                          </p>
-                        </div>
-                      </div>
-                      <div class="custom-card5 home-logado-card3">
-                        <div class="card-body">
-                          <div
-                            class="d-flex align-items-center altura-card home-logado-card"
-                          >
-                            <img
-                              src="images/itau-icon.png"
-                              class="img-fluid rounded-start margem-esquerda"
-                              alt="edu-financeira"
-                            />
-                            <div>
-                              <p class="fs-5 mt-3 mb-3">
-                                <span class="preto">Itau</span
-                                ><span class="cinza">ITUB4</span>
-                              </p>
-                            </div>
-                            <div>
-                              <p class="fs-5 mt-3 mb-3 custom-padding-left5">
-                                1,35%
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+        <div id="containerCaroussel" data-animated>
+          <ul id="list" >
+            <div th:each="acao, acaoStat : ${acoesUsuario} ">
+              <li th:text="${acao[6]} + ' | ' + ${acao[0]} + ' | ' + ${acao[4]} + '%'"></li>
+
             </div>
-            <div class="col-md-6">
-              <div class="custom-card4">
-                <div class="card-body">
-                  <div
-                    class="custom-padding-left2 d-flex align-items-center altura-card"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      fill="currentColor"
-                      class="bi bi-graph-down-arrow"
-                      viewBox="0 0 16 16"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M0 0h1v15h15v1H0V0Zm10 11.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-1 0v2.6l-3.613-4.417a.5.5 0 0 0-.74-.037L7.06 8.233 3.404 3.206a.5.5 0 0 0-.808.588l4 5.5a.5.5 0 0 0 .758.06l2.609-2.61L13.445 11H10.5a.5.5 0 0 0-.5.5Z"
-                      />
-                    </svg>
-                    <p class="fs-5 mt-3 mb-3 custom-padding-left3">Em Baixa!</p>
-                  </div>
-                  <div class="custom-card6 home-logado-card2">
-                    <div class="card-body">
-                      <div
-                        class="d-flex align-items-center altura-card home-logado-card"
-                      >
-                        <img
-                          src="images/vale1-icon.png"
-                          class="img-fluid rounded-start margem-esquerda"
-                          alt="edu-financeira"
-                        />
-                        <div>
-                          <p class="fs-5 mt-3 mb-3">
-                            <span class="preto">Vale</span
-                            ><span class="cinza">VAL3</span>
-                          </p>
-                        </div>
-                        <div>
-                          <p class="fs-5 mt-3 mb-3 custom-padding-left4">
-                            -4,95%
-                          </p>
-                        </div>
-                      </div>
-                      <div class="custom-card6 home-logado-card3">
-                        <div class="card-body">
-                          <div
-                            class="d-flex align-items-center altura-card home-logado-card"
-                          >
-                            <img
-                              src="images/localiza1-icon.png"
-                              class="img-fluid rounded-start margem-esquerda"
-                              alt="edu-financeira"
-                            />
-                            <div>
-                              <p class="fs-5 mt-3 mb-3">
-                                <span class="preto">Localiza</span
-                                ><span class="cinza">RENT3</span>
-                              </p>
-                            </div>
-                            <div>
-                              <p class="fs-5 mt-3 mb-3 custom-padding-left6">
-                                -2,65%
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+
+
+          </ul>
         </div>
 
         <div class="container-fluid mt-2 mb-2">
           <div class="row ms-5 mt-5">
             <div class="col-md-6 text-center">
-              <h1 class="h2 fw-bold custom-padding-top custom-padding-right-index">Notícias</h1>
+              <h1
+                class="h2 fw-bold custom-padding-top custom-padding-right-index"
+              >
+                Notícias
+              </h1>
             </div>
           </div>
         </div>
 
-        <div th:replace="~{fragments/cardHomeLogado/grupoCardHomeLogado :: grupoCardHomeLogado}"></div>
-        
+        <div
+          th:replace="~{fragments/cardHomeLogado/grupoCardHomeLogado :: grupoCardHomeLogado}"
+        ></div>
       </div>
     </main>
 
     <footer th:replace="~{fragments/footerLogadoFragment :: footer}"></footer>
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      function atualizarTela() {
+        const elementoDataHora = document.getElementById("data-hora");
+        const dataHoraAtual = new Date();
+        const options = {
+          year: "numeric",
+          month: "numeric",
+          day: "numeric",
+          hour: "numeric",
+          minute: "numeric",
+        };
+        const dataHoraFormatada = dataHoraAtual.toLocaleDateString(
+          "pt-BR",
+          options
+        );
+        // Atualizar data/hora
+        elementoDataHora.textContent = "Atualizado em " + dataHoraFormatada;
+
+        // Atualizar Variação Saldo
+        const elementoVariacaoSaldo = document.getElementById("variacao-saldo");
+        const valorSaldo = parseFloat(
+          elementoVariacaoSaldo.querySelector("span").textContent
+        );
+
+        if (valorSaldo > 0) {
+          elementoVariacaoSaldo.classList.add("verde");
+          elementoVariacaoSaldo.querySelector("span").textContent =
+            "+ R$" + valorSaldo;
+        } else if (valorSaldo < 0) {
+          elementoVariacaoSaldo.classList.add("vermelho");
+          elementoVariacaoSaldo.querySelector("span").textContent =
+            "- R$" + valorSaldo;
+        } else {
+          elementoVariacaoSaldo.classList.add("branco");
+          elementoVariacaoSaldo.querySelector("span").textContent =
+            "R$" + valorSaldo;
+        }
+
+        // Atualizar Lucro Total
+        const elementoLucroTotal = document.getElementById("lucro-total");
+        const stringCharElmLucroTotal =
+          elementoLucroTotal.querySelector("span").textContent;
+
+        if (stringCharElmLucroTotal.includes("+")) {
+          elementoLucroTotal.classList.add("verde");
+        } else if (stringCharElmLucroTotal.includes("-")) {
+          elementoLucroTotal.classList.add("vermelho");
+        } else {
+          elementoLucroTotal.classList.add("branco");
+        }
+
+        // Atualizar Melhor Performance
+        const elementoMelhorPerformance =
+          document.getElementById("melhor-performance");
+        const stringElmMelPerformance =
+          elementoMelhorPerformance.querySelector("span").textContent;
+
+        if (stringElmMelPerformance.includes("+")) {
+          elementoMelhorPerformance.classList.add("verde");
+        } else if (stringElmMelPerformance.includes("-")) {
+          elementoMelhorPerformance.classList.add("vermelho");
+        } else {
+          elementoMelhorPerformance.classList.add("branco");
+        }
+
+        // Atualizar Pior Performance
+        const elementoPiorPerformance =
+          document.getElementById("pior-performance");
+        const stringElmPiorPerformance =
+          elementoPiorPerformance.querySelector("span").textContent;
+
+        if (stringElmPiorPerformance.includes("+")) {
+          elementoPiorPerformance.classList.add("verde");
+        } else if (stringElmPiorPerformance.includes("-")) {
+          elementoPiorPerformance.classList.add("vermelho");
+        } else {
+          elementoPiorPerformance.classList.add("branco");
+        }
+      }
+
+      // Add the new JavaScript code here
+      const list = document.querySelector("#list");
+      const listContent = Array.from(list.children);
+
+      listContent.forEach((item) => {
+        const duplicatedItem = item.cloneNode(true);
+        duplicatedItem.setAttribute("aria-hidden", true);
+        list.appendChild(duplicatedItem);
+      });
+
+      window.onload = function () {
+        atualizarTela();
+      };
+    </script>
   </body>
 </html>
