style: :art: Ajuste tabela
Ajuste na posição tabela invistaLogado

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -600,12 +600,13 @@ h4 {
 }
 
 .custom-margin-left2 {
-  margin-left: 30%;
+  margin-left: 380px;
 }
 
 .margin-table {
   margin-left: 400px;
 }
+
 
 .margin-left {
   margin-left: 10px
