--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaInvistaLogado.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaInvistaLogado.html
@@ -4,7 +4,7 @@
 >
   <link href="css/stylesheet.css" rel="stylesheet" />
 
-  <table class="table table-custom margin-table accordion">
+  <table class="table table-custom accordion">
     <thead>
       <tr>
         <th scope="col">EMPRESA</th>
