--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -301,6 +301,13 @@ body {
   margin-bottom: 30%;
 }
 
+.card4 {
+  background-color: var(--white);
+  max-width: 700px;
+  overflow-y: 200px;
+  border-radius: 20px;
+}
+
 .card-body {
   padding-top: 5%;
   padding-bottom: 5%;
