--- a/stocktrade/src/main/resources/templates/fragments/cardHomeLogado/cardHomeLogado.html
+++ b/stocktrade/src/main/resources/templates/fragments/cardHomeLogado/cardHomeLogado.html
@@ -6,7 +6,7 @@
         </p>
         <p class="card-text" th:text="${texto}"></p>
         <div class="d-flex justify-content-center">
-            <a class="btn btn-outline-primary botao1" th:text="${botao}"></a>
+            <a class="btn btn-outline-primary botao1" th:text="${botao}" href="/invista"></a>
         </div>
     </div>
     
