--- a/stocktrade/src/main/resources/templates/indexLogado.html
+++ b/stocktrade/src/main/resources/templates/indexLogado.html
@@ -14,9 +14,9 @@
         <div class="row ms-5 mt-5">
           <div class="col-md-6 custom-padding-left">
             <h1 class="h5 fw-bold">Preços diários por valor de mercado</h1>
-            <!-- <p class="fs-8 mt-4 mb-3 max-width-800px cinza">
-              Atualizado em 19/09/2023
-            </p> -->
+          <!-- Data/Hora -->
+          <p class="fs-8 mb-3 max-width-800px cinza" id="data-hora">
+          </p>
           </div>
         </div>
       </div>
