feat: :art: Implementação da tabela que mostra o histórico das negociações do usuário
Foi implementada uma nova tabela na página de Histórico, onde é possível visualizar todas as negociações já realizadas pelo Cliente ordenadas por data. Para tanto foi adaptada a seção de comprar e vender ações para que, na página de histórico, o usuário pudesse alternar facilmente entre visualizar suas movimentações ou suas negociações. Além disso, foi criada toda a lógica da busca das negociações do usuário com as querys no repositório de Acao, com um join em CompraAcao e VendaAcao.

#105

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -642,6 +642,51 @@ h4 {
     "button-comprar button-comprar";
 }
 
+/* CSS ACORDEAO TABLE COMPRAR */
+.container-botoes-movimentacao-negociacao{
+  display:flex
+}
+
+.container-movimentacoes {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-negociacoes {
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label-historico {
+  border: 0px solid #000;
+  background-color: var(--darker-blue);
+  padding-bottom: 7px;
+  color: white;
+  width: 100%;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+}
+
+.label-ativo {
+  color: #ffffff;
+  border-bottom: 2px solid #ffffff;
+}
+
+.label-inativo {
+  color: rgba(255, 255, 255, 0.3);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  transition: color 0.3s ease, border-bottom 0.3s ease;
+}
+
+.label-inativo:hover {
+  color: var(--white);
+  border-bottom: 2px solid var(--white);
+}
+
 .quantidade-disponivel {
   grid-area: quantidade-disponivel;
   text-wrap: nowrap;
