--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaMovimentacoes.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaMovimentacoes.html
@@ -1,7 +1,7 @@
 <div class="container row justify-content-center" th:fragment="tabelaMovimentacoes">
     <link href="../../../static/css/stylesheet.css" rel="stylesheet" />
 
-    <table class="table table-custom margin-table accordion">
+    <table class="table table-custom accordion">
         <thead>
             <tr>
                 <th scope="col">Data</th>
