--- a/stocktrade/src/main/resources/templates/fragments/footerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/footerFragment.html
@@ -21,8 +21,8 @@
     </div>
   </div>
 
-  <div class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5">
-    <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ml-0">
+  <div class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5 text-white">
+    <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ml-0 text-white">
       <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/', 'Home')}"></li>
 
       <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('invista', 'Invista')}"></li>
