--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaMovimentacoes.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaMovimentacoes.html
@@ -1,21 +1,35 @@
-<div class="container row justify-content-center" th:fragment="tabelaMovimentacoes">
-    <link href="../../../static/css/stylesheet.css" rel="stylesheet" />
+<div
+  class="container row justify-content-center"
+  th:fragment="tabelaMovimentacoes"
+>
+  <link href="../../../static/css/stylesheet.css" rel="stylesheet" />
 
+  <div th:if="${movimentacoes != null and not #lists.isEmpty(movimentacoes)}">
     <table class="table table-custom accordion">
-        <thead>
-            <tr>
-                <th scope="col">Data</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Valor</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Iterar sobre a lista de movimentações já ordenada -->
-            <tr th:each="movimentacao : ${movimentacoes}">
-                <td th:text="${#dates.format(movimentacao.data, 'dd/MM/yyyy - HH:mm')}"></td>
-                <td th:text="${#strings.replace(#strings.replace(#strings.replace(#strings.replace(movimentacao.tipo, 'DEPOSITO', 'Depósito'), 'TRANSFERENCIA', 'Transferência'), 'DIVIDENDO', 'Dividendo'), 'SAQUE', 'Saque')}"></td>
-                <td th:text="'R$ ' + ${movimentacao.valor}"></td>
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th scope="col">Data</th>
+          <th scope="col">Tipo</th>
+          <th scope="col">Valor</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Iterar sobre a lista de movimentações já ordenada -->
+
+        <tr th:each="movimentacao : ${movimentacoes}">
+          <td
+            th:text="${#dates.format(movimentacao.data, 'dd/MM/yyyy - HH:mm')}"
+          ></td>
+          <td
+            th:text="${#strings.replace(#strings.replace(#strings.replace(#strings.replace(movimentacao.tipo, 'DEPOSITO', 'Depósito'), 'TRANSFERENCIA', 'Transferência'), 'DIVIDENDO', 'Dividendo'), 'SAQUE', 'Saque')}"
+          ></td>
+          <td th:text="'R$ ' + ${movimentacao.valor}"></td>
+        </tr>
+      </tbody>
     </table>
+  </div>
+
+  <div th:if="${movimentacoes == null or #lists.isEmpty(movimentacoes)}">
+    <h5 class="text-center">Você não possui movimentações</h5>
+  </div>
 </div>
