--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaNegociacoes.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaNegociacoes.html
@@ -1,29 +1,38 @@
-<div class="container row justify-content-center" th:fragment="tabelaNegociacoes">
-    <link href="../../../static/css/stylesheet.css" rel="stylesheet" />
-
+<div
+  class="container row justify-content-center"
+  th:fragment="tabelaNegociacoes"
+>
+  <link href="../../../static/css/stylesheet.css" rel="stylesheet" />
+  <div th:if="${negociacoes != null and not #lists.isEmpty(negociacoes)}">
     <table class="table table-custom accordion">
-        <thead>
-            <tr>
-                <th scope="col">Data</th>
-                <th scope="col">Empresa</th>
-                <th scope="col">Sigla</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Quantidade</th>
-                <th scope="col">Preço Médio</th>
-                <th scope="col">Valor Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Iterar sobre a lista de movimentações já ordenada -->
-            <tr th:each="negociacao : ${negociacoes}">
-                <td th:text="${#dates.format(negociacao[0], 'dd/MM/yyyy - HH:mm')}"></td>
-                <td th:text="${negociacao[1]}"></td>
-                <td th:text="${negociacao[2]}"></td>
-                <td th:text="${negociacao[3]}"></td>
-                <td th:text="${negociacao[4]}"></td>
-                <td th:text="'R$ ' + ${negociacao[5]}"></td>
-                <td th:text="'R$ ' + ${negociacao[6]}"></td>
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th scope="col">Data</th>
+          <th scope="col">Empresa</th>
+          <th scope="col">Sigla</th>
+          <th scope="col">Tipo</th>
+          <th scope="col">Quantidade</th>
+          <th scope="col">Preço Médio</th>
+          <th scope="col">Valor Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Iterar sobre a lista de movimentações já ordenada -->
+        <tr th:each="negociacao : ${negociacoes}">
+          <td
+            th:text="${#dates.format(negociacao[0], 'dd/MM/yyyy - HH:mm')}"
+          ></td>
+          <td th:text="${negociacao[1]}"></td>
+          <td th:text="${negociacao[2]}"></td>
+          <td th:text="${negociacao[3]}"></td>
+          <td th:text="${negociacao[4]}"></td>
+          <td th:text="'R$ ' + ${negociacao[5]}"></td>
+          <td th:text="'R$ ' + ${negociacao[6]}"></td>
+        </tr>
+      </tbody>
     </table>
+  </div>
+  <div th:if="${negociacoes == null or #lists.isEmpty(negociacoes)}">
+    <h5 class="text-center">Você não possui negociações</h5>
+  </div>
 </div>
