--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -26,154 +26,58 @@
 
       <div class="container mb-5 mt-100">
         <!-- Linha dos Cards -->
-        <div class="row justify-content-center">
+        <div class="row justify-content-evenly align-items-center">
           <!-- Card 1 Carteira -->
-          <div class="col-md-1">
-            <div class="card custom-card2">
-              <div
-                class="card-body d-flex align-items-center justify-content-center"
-              >
-                <div class="">
-                  <img
-                    src="icons/carteira-icon.png"
-                    class=""
-                    alt="icone carteira"
-                  />
-                </div>
+          <div class="custom-card2">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                  <div class="pe-3">
+                      <img src="icons/carteira-icon.png" class="pt-1" alt="icone carteira" />
+                  </div>
+                  <h6 class="pt-2">Carteira</h6>
               </div>
-            </div>
           </div>
-
-          <!-- Card 1 - Carteira -->
-          <div class="col-md-1">
-            <div class="">
-              <div
-                class="d-flex align-items-center justify-content-start mt-4 pt-4"
-              >
-                <div class="">
-                  <h6>Carteira</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-
+      
           <!-- Card 2 - seguranca -->
-          <div class="col-md-1">
-            <div class="card custom-card2">
-              <div
-                class="card-body d-flex align-items-center justify-content-center"
-              >
-                <div class="">
-                  <img
-                    src="icons/seguranca2-icon.png"
-                    class="img-fluid max-img-width"
-                    alt="icone seguranca"
-                  />
-                </div>
+          <div class="custom-card2">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                  <div class="pe-3">
+                      <img src="icons/seguranca2-icon.png" class="img-fluid max-img-width" alt="icone seguranca" />
+                  </div>
+                  <h6 class="pt-2">Segurança</h6>
               </div>
-            </div>
           </div>
-
-          <!-- Card 2 - Seguranca -->
-          <div class="col-md-1">
-            <div class="">
-              <div
-                class="d-flex align-items-center justify-content-start mt-4 pt-4"
-              >
-                <div class="">
-                  <h6>Segurança</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-
+      
           <!-- Card 3 - Investimentos -->
-          <div class="col-md-1">
-            <div class="card custom-card2">
-              <div
-                class="card-body d-flex align-items-center justify-content-center"
-              >
-                <div class="">
-                  <img
-                    src="icons/investimentos-icon.png"
-                    class=""
-                    alt="icone investimentos"
-                  />
-                </div>
+          <div class="custom-card2">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                  <div class="pe-3">
+                      <img src="icons/investimentos-icon.png" class="pt-1" alt="icone investimentos" />
+                  </div>
+                  <h6 class="pt-2">Investir</h6>
               </div>
-            </div>
           </div>
-
-          <!-- Card 3 - Investimentos -->
-          <div class="col-md-1">
-            <div class="">
-              <div
-                class="d-flex align-items-center justify-content-start mt-4 pt-4"
-              >
-                <div class="">
-                  <h6>Investir</h6>
+      
+          <!-- Card - Negocie -->
+          <div class="custom-card2">
+            <div class="card-body d-flex align-items-center justify-content-center">
+                <div class="pe-3">
+                    <img src="icons/compravenda-icon.png" class="pt-1" alt="icone negocie" />
                 </div>
-              </div>
+                <h6 class="pt-2">Negocie</h6>
             </div>
-          </div>
-
-          <!-- Card - Compra e Venda -->
-          <div class="col-md-1">
-            <div class="card custom-card2">
-              <div
-                class="card-body d-flex align-items-center justify-content-center"
-              >
-                <div class="">
-                  <img
-                    src="icons/compravenda-icon.png"
-                    class=""
-                    alt="icone compra e venda"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 4 - Compra e Venda -->
-          <div class="col-md-1">
-            <div class="">
-              <div
-                class="d-flex align-items-center justify-content-start mt-3 pt-4"
-              >
-                <div class="">
-                  <h6 class="white-space-no-wrap">Compra e Venda</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-
+        </div>
+      
           <!-- Card 5 - Dividendos-->
-          <div class="col-md-1">
-            <div class="card custom-card2">
-              <div
-                class="card-body d-flex align-items-center justify-content-center"
-              >
-                <img
-                  src="icons/dividendos-icon.png"
-                  class=""
-                  alt="icone dividendos"
-                />
+          <div class="custom-card2">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                  <div class="pe-3">
+                      <img src="icons/dividendos-icon.png" class="pt-1" alt="icone dividendos" />
+                  </div>
+                  <h6 class="white-space-no-wrap pt-2">Dividendos</h6>
               </div>
-            </div>
           </div>
-
-          <!-- Card 5 - Dividendos -->
-          <div class="col-md-1">
-            <div class="">
-              <div
-                class="d-flex align-items-center justify-content-start mt-4 pt-4"
-              >
-                <div class="">
-                  <h6 class="white-space-no-wrap">Dividendos</h6>
-                </div>
-              </div>
-            </div>
-          </div>
+      </div>
+      
 
           <div class="container mb-4">
             <div class="container row">
@@ -193,7 +97,7 @@
             </div>
           </div>
 
-          <div th:replace="~{fragments/cardInvista/grupoCardInvista :: grupoCardInvista}"></div>
+          <div th:replace="~{fragments/cardInvista/grupoCardInvista :: grupoCardInvista}"></div>  
           
         </div>
       </div>
