--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -1191,12 +1191,10 @@ li {
 }
 
 .perfilIcon {
-  transition: width 0.5s, height 0.5s fill 0.6s;
+  transition: fill 0.5s;
 }
 
 .perfilIcon:hover {
-  width: 38px;
-  height: 42px;
   fill: #081a7d;
 }
 
